force-app/main/default/objects/ApexJobRun__c/ApexJobRun__c.object-meta.xml
<CustomObject>
    <label>Apex Job Run</label>
    <nameField>
        <displayFormat>AJ-{0000}</displayFormat>
        <label>Apex Job Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Job Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>