force-app/main/default/objects/ApexJobRun__c/fields/ApexJobSummary__c.field-meta.xml
<CustomField>
    <fullName>ApexJobSummary__c</fullName>
    <label>Apex Job Summary</label>
    <referenceTo>ApexJobSummary__c</referenceTo>
    <relationshipLabel>Apex Job Runs</relationshipLabel>
    <relationshipName>ApexJobRuns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>