force-app/main/default/objects/ApexJobRun__c/fields/RunTime__c.field-meta.xml
<CustomField>
    <fullName>RunTime__c</fullName>
    <inlineHelpText>Time in day that the job ran</inlineHelpText>
    <label>Run Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00:00 - 00:59</fullName>
            </value>
            <value>
                <fullName>01:00 - 01:59</fullName>
            </value>
            <value>
                <fullName>02:00 - 02:59</fullName>
            </value>
            <value>
                <fullName>03:00 - 03:59</fullName>
            </value>
            <value>
                <fullName>04:00 - 04:59</fullName>
            </value>
            <value>
                <fullName>05:00 - 05:59</fullName>
            </value>
            <value>
                <fullName>06:00 - 06:59</fullName>
            </value>
            <value>
                <fullName>07:00 - 07:59</fullName>
            </value>
            <value>
                <fullName>08:00 - 08:59</fullName>
            </value>
            <value>
                <fullName>09:00 - 09:59</fullName>
            </value>
            <value>
                <fullName>10:00 - 10:59</fullName>
            </value>
            <value>
                <fullName>11:00 - 11:59</fullName>
            </value>
            <value>
                <fullName>12:00 - 12:59</fullName>
            </value>
            <value>
                <fullName>13:00 - 13:59</fullName>
            </value>
            <value>
                <fullName>14:00 - 14:59</fullName>
            </value>
            <value>
                <fullName>15:00 - 15:59</fullName>
            </value>
            <value>
                <fullName>16:00 - 16:59</fullName>
            </value>
            <value>
                <fullName>17:00 - 17:59</fullName>
            </value>
            <value>
                <fullName>18:00 - 18:59</fullName>
            </value>
            <value>
                <fullName>19:00 - 19:59</fullName>
            </value>
            <value>
                <fullName>20:00 - 20:59</fullName>
            </value>
            <value>
                <fullName>21:00 - 21:59</fullName>
            </value>
            <value>
                <fullName>22:00 - 22:59</fullName>
            </value>
            <value>
                <fullName>23:00 - 23:59</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>