force-app/main/default/objects/ApexJobRun__c/fields/TotalFailures__c.field-meta.xml
<CustomField>
    <fullName>TotalFailures__c</fullName>
    <label>Total Failures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>