force-app/main/default/objects/ApexJobRun__c/fields/TotalSuccesses__c.field-meta.xml
<CustomField>
    <fullName>TotalSuccesses__c</fullName>
    <label>Total Successes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>